# python-workspace

./: README.md  pyproject.toml
.github/workflows/: pull_request.yml  release.yml
python_workspace/: main.py  parallel_exec.py  project.py  workspace.py
tests/: test_main.py
